[ENTESB-20663] Synchronize few more features and ACLs with what we had in Fuse 7.11 (Karaf 4.2)